<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tourism in Jordan</string>
    <string name="splash_icon">splash_Icon</string>
    <string name="facebook_app_id">912454893298568</string>
    <string name="tourism_in_jordan">Tourism in Jordan</string>
    <string name="tourism_in_jordan_ui">TOURISM\nIN JORDAN</string>
    <string name="your_tour_guide">Your Tour Guide</string>
    <string name="ic_person">ic_person</string>
    <string name="admin">Admin</string>
    <string name="users">User</string>
    <string name="User">Users</string>
    <string name="skip">Skip</string>
    <string name="language">language</string>
    <string name="icon_app">icon_app</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Signup!</string>
    <string name="or">or</string>
    <string name="facebook">facebook</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_users">Tourism in Jordan team welcomes you and wishes you from this application</string>
    <string name="get_started">get started</string>
    <string name="admin_login">Admin Login</string>
    <string name="id">ID </string>
    <string name="_000_000_000">000–000–000</string>
    <string name="password_stars">********</string>
    <string name="email_example">user@example.com</string>
    <string name="create_new_account">Create new Account</string>
    <string name="already_registered_log_in_here">Already Registered? Log in here.</string>
    <string name="user_name">User Name</string>
    <string name="data_of_birth">Data of Birth</string>
    <string name="create_password">Create Password</string>
    <string name="re_password">Re-password</string>
    <string name="registration">registration</string>
    <string name="forget_password">Forget Password</string>
    <string name="find_your_email_address">Find your email address</string>
    <string name="enter_e_mail_or_your_phone">Enter E-mail</string>
    <string name="enter_your_recovery_phone_number_or_email_address">Enter your recovery phone number or email address</string>
    <string name="send">Send</string>
    <string name="discription_text">We will send you instructions on how to reset your password by email.</string>
    <string name="English">English</string>
    <string name="translate">translate</string>
    <string name="help">Help</string>
    <string name="text_verification">Enter the verification code that was sent to you by mail or the phone number you entered</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="verify">verify</string>
    <string name="verification">Verification</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="successfully_statement">The Process accomplished successfully</string>
    <string name="you_can_now_go_to_login">You can now go to login</string>
    <string name="go_to_login">Go to login</string>
    <string name="come_us">Come Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="todo">todo</string>
    <string name="provinces">Provinces</string>
    <string name="back_icon">Back_icon</string>
    <string name="amman">Amman</string>
    <string name="_4_7">4.7</string>
    <string-array name="Provinces_Name">
        <item>Amman</item>
        <item>Al Salt</item>
        <item>Al Zarqa</item>
        <item>Mafraq</item>
        <item>Ma\'an</item>
        <item>Ajloun</item>
        <item>Irbid</item>
        <item>Jerash</item>
        <item>Aqaba</item>
        <item>Madaba</item>
        <item>Tafilah</item>
        <item>Karak</item>
    </string-array>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="places">Categories &amp; Places</string>
    <string name="maps">Maps</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="mode">Mode</string>
    <string name="main">Main</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="image_profile">image_profile</string>
    <string name="account_page">Account Page</string>
    <string name="antiquities">Antiquities</string>
    <string name="tourist_places">Tourist places</string>
    <string name="salt">Salt</string>
    <string name="zarqa">Zarqa</string>
    <string name="mafraq">Mafraq</string>
    <string name="ma_an">Ma\'an</string>
    <string name="ajloun">Ajloun</string>
    <string name="irbid">Irbid</string>
    <string name="jerash">Jerash</string>
    <string name="aqaba">Aqaba</string>
    <string name="madaba">Madaba</string>
    <string name="tafilah">Tafilah</string>
    <string name="karak">Karak</string>
    <string name="edit_picture">Edit picture</string>
    <string name="name">Name</string>
    <string name="check">check</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="_2023_tourism_in_jordan">©2023 Tourism in Jordan</string>
    <string name="location">LOCATION</string>
    <string name="hr">_______________________________________________________</string>
    <string name="see_on_google_maps">See on google maps</string>
    <string name="comments">Comments</string>
    <string name="read_less">less</string>
    <string name="read_more">more</string>
    <string name="museum">Museums</string>
    <string name="categories">Categories</string>
    <string name="general">General</string>
    <string name="enter_you_r_comment">Enter You\'r Comment</string>
    <string name="add">post</string>
    <string name="time">Time</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="comment_modification">Comment Modification</string>
    <string name="you_must_be_logged_in">You must be logged in</string>
    <string name="Login">login</string>
    <string name="text_verify_1">After clicking on the verification link that was sent via email, click on the Verify button</string>
    <string name="change_password">An email has been sent to the email that was written, please change the password through it</string>
    <string name="done">Done!</string>
    <string name="add_comment_1">add_comment_!</string>
    <string name="the_place_name">The Place Name</string>
    <string name="description_of_the_place">Description of the Place</string>
    <string name="working_hours">Working hours</string>
    <string name="about_the_place">About the place</string>
    <string name="website_link">Location link</string>
    <string name="entering_info">Entering Info</string>
    <string name="province_names">Province names</string>
    <string name="save">Save</string>
    <string name="upload_a_photo">Upload a photos</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="add_place">Add place</string>
    <string name="users1">Users</string>
    <string name="home">Home</string>
    <string name="users_list">Users List</string>
    <string name="edit_name">Edit Name</string>
    <string name="place_category">Place Category</string>
    <string name="search_for_a_province">Search for a Province</string>
    <string name="please_enter_new_name">Please Enter New Name</string>
    <string name="choose_place_category">Choose Place Category</string>
    <string name="museums">Museums</string>
    <string name="please_enter_the_information">Please Enter The Information</string>
    <string name="added_successfully">Added successfully!</string>
    <string name="please_registered_email_address">Please registered email address</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="password_reset">A password reset message has been sent to the entered email address</string>
    <string name="error_occurred">An error occurred while sending the password reset message. Please try again</string>
    <string name="please_enter_id_and_password">Please Enter Id and Password</string>
    <string name="the_password_is_wrong">The password is wrong</string>
    <string name="the_id_is_wrong">The id is wrong</string>
    <string name="enter_email_and_password">Enter Email and Password</string>
    <string name="you_are_signed_in">You are signed in</string>
    <string name="the_image_has_been_uploaded_successfully">The image has been uploaded successfully!</string>
    <string name="an_error_occurred_image">An error occurred. Make sure the image is loaded correctly, or try again later</string>
    <string name="choose_the_language">Choose the Language</string>
    <string name="arabic">Arabic</string>
    <string name="enter_the_required_data">Please enter the required data</string>
    <string name="combination">The password should be a combination of letters and numbers</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="at_least_6">The password must be at least 6 characters long</string>
    <string name="A_verification_message">A verification message has been sent to your email, please click on it to confirm the email address</string>
    <string name="Failed_to_send_verification_email">Failed to send verification email</string>
    <string name="Please_verify_your_email_address">Please verify your email address</string>
    <string name="Failed_to_reload_user">Failed to reload user.</string>
    <string name="Please_Enter_Your_Comment">Please Enter Your Comment</string>
    <string name="choose_the_province">Choose the province</string>
    <string name="al_salt">Al Salt</string>
    <string name="al_zarqa">Al Zarqa</string>
    <string name="maan">Ma\'an</string>

</resources>