<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Main_Color_Application"
    tools:context=".entry_info">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/entering_info"
        android:textColor="@color/white"
        android:textSize="28sp" />
<LinearLayout
    android:layout_marginTop="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_below="@+id/enter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UselessLeaf,UselessParent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/the_place_name"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/the_place_name"
        android:maxLength="35"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:layout_marginBottom="15dp"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/about_the_place"
        android:textColor="@color/white"/>
    <EditText
        android:maxLength="50"
        android:id="@+id/about_the_place"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:layout_marginBottom="15dp"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/description_of_the_place"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/description_of_the_place"
        android:maxLength="500"
        android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/edit_text_style"
    android:importantForAutofill="no"
        android:layout_marginBottom="15dp"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/working_hours"
        android:textColor="@color/white"/>
    <EditText
        android:maxLength="15"
        android:id="@+id/working_hours"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/website_link"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/location_link"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:layout_marginBottom="15dp"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/province_names"
        android:textColor="@color/white"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:padding="5dp"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/place_category"
        android:textColor="@color/white"/>
    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:padding="5dp"
        android:layout_marginBottom="15dp"
        />
    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_a_photo" />
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_btn"
            android:onClick="cancel"
            android:background="@drawable/button_1_style"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="30dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/save_btn"
            android:background="@drawable/button_1_style"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
    </LinearLayout>
</ScrollView>
    <ProgressBar
        android:id="@+id/applicationProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:background="@drawable/linear_layout_style"
        />
</RelativeLayout>