<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_petra_edition"
    tools:context=".login_admin">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_1_style"
        android:contentDescription="@string/back_icon"
        android:onClick="BackIcon"
        android:paddingStart="10dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linear_layout_style"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headerLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/admin_login"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/id"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/id_editText"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/background_plain_text_style"
                android:hint="@string/_000_000_000"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_login_Admin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/background_plain_text_style"
                android:hint="@string/password_stars"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/logIn_admin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_button_style"
                android:text="@string/log_in"
                android:textColor="@color/Main_Color_Application" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/applicationProgressBar"
        android:background="@drawable/button_2_style"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
</RelativeLayout>