<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Main_Color_Application"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessLeaf,UselessParent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/the_place_name"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/the_place_name"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:layout_marginBottom="15dp"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/about_the_place"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/about_the_place"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:layout_marginBottom="15dp"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/description_of_the_place"
        android:textColor="@color/white"/>
    <EditText
        android:padding="4dp"
        android:id="@+id/description_of_the_place"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:layout_marginBottom="15dp"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/working_hours"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/working_hours"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/website_link"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/location_link"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_style"
        android:importantForAutofill="no"
        android:layout_marginBottom="15dp"
        tools:ignore="ExtraText,LabelFor,TextFields" />

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel_btn"
            android:background="@drawable/button_1_style"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="30dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/edit_btn"
            android:background="@drawable/button_1_style"
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>