<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_petra_edition"
    tools:context=".login_user">
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_1_style"
        android:contentDescription="@string/back_icon"
        android:onClick="BackIcon"
        android:paddingStart="10dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        tools:ignore="RtlSymmetry" />
    <LinearLayout
        android:layout_centerVertical="true"
        android:background="@drawable/linear_layout_style"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        tools:ignore="RelativeOverlap">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
        <TextView
            android:id="@+id/headerLogin"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                />
            <EditText
                android:id="@+id/eMail"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:background="@drawable/background_plain_text_style"
                android:padding="10dp"
                tools:ignore="LabelFor,TextFields"
                android:importantForAutofill="no" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                />
            <EditText
                android:id="@+id/password_login_user"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_plain_text_style"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_marginBottom="30dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
            <Button
                android:id="@+id/logIn"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_style"
                android:text="@string/log_in"
                android:textColor="@color/Main_Color_Application"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/forgotPasswordPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/signupUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/signup"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                />



        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:background="@drawable/linear_layout_style"
        />
</RelativeLayout>